# phonk

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE-APACHE  LICENSE-MIT  Lexer.cpp  README.md  Tolkenize.cpp
.github/workflows/: build.yaml  ci.yml  tests.yml
compiler/: CMakeLists.txt
compiler/include/phonk/: compiler.hpp
compiler/include/phonk/diagnostics/: Diagnostic.hpp  DiagnosticEngine.hpp  diagnostic.hpp  diagnostic_engine.hpp
compiler/include/phonk/lexer/: Lexer.hpp  Token.hpp  lexer.hpp  token.hpp
compiler/include/phonk/source/: SourceFile.hpp  SourceLocation.hpp  SourceRange.hpp  source_file.hpp  source_location.hpp  source_range.hpp
compiler/src/: compiler.cpp  main.cpp
compiler/src/diagnostics/: Diagnostic.cpp  DiagnosticEngine.cpp  diagnostic.cpp  diagnostic_engine.cpp
compiler/src/lexer/: Lexer.cpp  lexer.cpp
compiler/src/source/: SourceFile.cpp  source_file.cpp
docs/: syntax.md
headers/: lexer.h  token.h
include/: ast.h  error.h  expression.h  lexer.h  lexer_error.h  parser.h  statement.h  token.h  transpiler.h
src/: lexer.cpp  main.cpp  parser.cpp  transpiler.cpp
tests/: CMakeLists.txt  lexer_tests.cpp  parser_tests.cpp
tests/lexer/: lexer_test_utils.hpp  lexer_tests.cpp  literal_tests.cpp
